--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="j-E_qPcdEkUJLCdepeOoosXa89fAAIfaaTtc4BNtok4" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lar Esperto – Os melhores achados para sua casa</title>
   <meta name="description" content="Dicas, reviews e os melhores produtos para casa, organização e dia a dia com os melhores preços do Mercado Livre.">
